--- a/atomic-swap/src/main/res/layout/item_trade_offer.xml
+++ b/atomic-swap/src/main/res/layout/item_trade_offer.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
-    android:layout_marginVertical="8dp">
+    android:layout_marginVertical="8dp"
+    app:cardCornerRadius="5dp"
+    app:cardElevation="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,17 +21,10 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:lines="1"
-                android:textColor="@color/text_primary"
-                tools:text="From:" />
-
-            <TextView
                 android:id="@+id/fromCurrencyAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="3dp"
                 android:ellipsize="end"
                 android:lines="1"
                 android:textColor="@color/text_primary"
@@ -38,30 +34,36 @@
                 android:id="@+id/fromCurrency"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:lines="1"
                 android:textColor="@color/text_primary"
                 tools:text="BTC" />
 
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:ellipsize="end"
+                android:gravity="right"
+                android:textColor="@color/text_secondary"
+                tools:text="Pending" />
 
         </LinearLayout>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_margin="6dp"
+            android:src="@drawable/ic_arrow_forward_black" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:lines="1"
-                android:textColor="@color/text_primary"
-                tools:text="To:" />
-
-            <TextView
                 android:id="@+id/toCurrencyAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="3dp"
                 android:ellipsize="end"
                 android:lines="1"
                 android:textColor="@color/text_primary"
@@ -69,10 +71,8 @@
 
             <TextView
                 android:id="@+id/toCurrency"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:lines="1"
                 android:textColor="@color/text_primary"
                 tools:text="BTC" />
 
@@ -84,24 +84,12 @@
             android:layout_marginTop="16dp"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/status"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:ellipsize="end"
-                android:gravity="center_vertical"
-                android:textColor="@color/text_primary"
-                android:layout_weight="1"
-                tools:text="Pending" />
-
             <Button
                 android:id="@+id/acceptButton"
-                android:layout_width="110dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:background="@color/green"
-                android:text="@string/button_accept"
-                android:textColor="@android:color/white" />
+                android:text="@string/button_accept" />
 
         </LinearLayout>
 
