--- a/atomic-swap/src/main/res/drawable/ic_arrow_forward_black.xml
+++ b/atomic-swap/src/main/res/drawable/ic_arrow_forward_black.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
     <path
         android:pathData="M12,4l-1.41,1.41L16.17,11H4v2h12.17l-5.58,5.59L12,20l8,-8 -8,-8z"
-        android:fillColor="@color/black" />
+        android:fillColor="@color/text_tertiary" />
 </vector>
