--- a/valuetransfer/src/main/res/layout/dialog_exchange_transfer_link.xml
+++ b/valuetransfer/src/main/res/layout/dialog_exchange_transfer_link.xml
@@ -120,23 +120,24 @@
     <EditText
         android:id="@+id/etIBAN"
         android:layout_width="match_parent"
-        android:minHeight="40dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:background="@drawable/pill_rounded"
         android:backgroundTint="@color/light_gray"
-        android:paddingVertical="8dp"
+        android:hint="@string/text_exchange_iban"
         android:inputType="textCapSentences"
+        android:minHeight="40dp"
+        android:paddingVertical="8dp"
         android:paddingStart="8dp"
         android:paddingRight="8dp"
-        android:layout_marginTop="12dp"
-        android:textSize="14sp"
         android:textColor="@color/black"
         android:textColorHint="@color/gray"
-        android:hint="@string/text_exchange_iban"
+        android:textSize="14sp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/clSelectedType" />
+        app:layout_constraintTop_toBottomOf="@+id/clSelectedType"
+        tools:visibility="visible" />
 
     <EditText
         android:id="@+id/etTransactionMessage"
