Add trust scores database view
Signed-off-by: Jurriaan Den Toonder <1493561+Fastjur@users.noreply.github.com>

--- a/eurotoken/src/main/res/menu/eurotoken_options.xml
+++ b/eurotoken/src/main/res/menu/eurotoken_options.xml
@@ -15,4 +15,7 @@
     <item
         android:id="@+id/toggleDemoMode"
         android:title="@string/toggle_demo_mode" />
+    <item
+        android:id="@+id/trustScoresMenuItem"
+        android:title="@string/trust_scores_menu_item" />
 </menu>
