--- a/valuetransfer/src/main/res/layout/fragment_exchange_transfer_money_link.xml
+++ b/valuetransfer/src/main/res/layout/fragment_exchange_transfer_money_link.xml
@@ -88,6 +88,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/llPaymentMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
@@ -95,6 +96,7 @@
             android:paddingHorizontal="12dp"
             android:paddingVertical="8dp"
             android:orientation="vertical"
+            android:visibility="gone"
             android:background="@drawable/pill_rounded"
             android:backgroundTint="?attr/widgetColor"
             android:gravity="center_vertical">
@@ -139,6 +141,7 @@
                 android:backgroundTint="?attr/widgetColor"
                 android:paddingHorizontal="12dp"
                 android:paddingVertical="8dp"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/clPayEurotoken">
