--- a/freedomOfComputing/src/main/res/layout/fragment_download.xml
+++ b/freedomOfComputing/src/main/res/layout/fragment_download.xml
@@ -29,16 +29,16 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:foregroundGravity="center"
-        android:progress="75"
+        android:progress="0"
         android:progressTint="@color/blue"
         />
     <TextView
-        android:id="@+id/tView"
+        android:id="@+id/progressBarPercentage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/progressBar"
         android:layout_below="@+id/progressBar"
-        android:text="75%"
+        android:text="@string/downloadProgressPercentage"
         />
 
     <TextView
