Info popUp can now toggle

--- a/freedomOfComputing/src/main/res/layout/activity_main_foc.xml
+++ b/freedomOfComputing/src/main/res/layout/activity_main_foc.xml
@@ -113,8 +113,8 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/content_main_activity_foc" />
-    <include layout="@layout/fragment_download" />
-    <include layout="@layout/fragment_debug" />
+    <include layout="@layout/fragment_debugging" android:visibility="gone"/>
+    <include layout="@layout/fragment_download" android:visibility="gone"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
