--- a/freedomOfComputing/src/main/res/layout/fragment_debugging.xml
+++ b/freedomOfComputing/src/main/res/layout/fragment_debugging.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/debugPopUp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,14 +7,20 @@
     android:layout_marginTop="150dp"
     android:layout_marginEnd="50dp"
     android:layout_marginStart="50dp"
-    android:background="@drawable/download_rounded_corners">
-
+    android:background="@drawable/download_rounded_corners"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/failedCounter"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/failedCounter"
-        />
+        android:text="@string/failedCounter" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/evaRetryCounter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="5dp"
+        android:text="@string/evaRetries" />
+
+</LinearLayout>
