--- a/valuetransfer/src/main/res/layout/dialog_exchange_transfer.xml
+++ b/valuetransfer/src/main/res/layout/dialog_exchange_transfer.xml
@@ -165,6 +165,38 @@
         app:layout_constraintTop_toBottomOf="@+id/clSelectedContact" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clAllowUnverified"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etTransactionMessage">
+
+        <TextView
+            android:id="@+id/tvAllowUnverifiedTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="8dp"
+            android:text="@string/text_allow_unverified_transfer"
+            android:textColor="?attr/onDialogColor"
+            android:textSize="12sp"
+            android:textStyle="italic"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <Switch
+            android:id="@+id/switchAllowUnverified"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clAddNewContact"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -173,7 +205,7 @@
         tools:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etTransactionMessage">
+        app:layout_constraintTop_toBottomOf="@+id/clAllowUnverified">
 
         <TextView
             android:id="@+id/tvAddNewContactTitle"
