--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,9 +2,11 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <!--        This is for bitcoin faucet, to claim some starter money using a REST call-->
+        <domain includeSubdomains="true">134.122.59.107</domain>
         <domain includeSubdomains="true">192.168.0.106</domain>
         <domain includeSubdomains="true">80.112.144.229</domain>
         <!--        This is for RegTest faucet, to claim some starter money -->
         <domain includeSubdomains="true">127.0.0.1</domain>
+        <domain includeSubdomains="true">131.180.27.224</domain>
     </domain-config>
 </network-security-config>
