--- a/frost/src/main/res/layout/fragment_frost.xml
+++ b/frost/src/main/res/layout/fragment_frost.xml
@@ -120,4 +120,15 @@
         android:text="Button4"
         android:fontFamily="sans-serif"/>
 
+    <Button
+        android:id="@+id/refresh"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="300dp"
+        android:layout_marginLeft="100dp"
+        android:backgroundTint="@color/frost"
+        android:text="refresh"
+        android:fontFamily="sans-serif"/>
+
 </RelativeLayout>
