--- a/frost/src/main/res/layout/fragment_frost.xml
+++ b/frost/src/main/res/layout/fragment_frost.xml
@@ -78,6 +78,20 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/text_refresh"
+        android:textColor="@color/white"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:fontFamily="sans-serif"
+        android:layout_marginTop="350dp"
+        android:layout_marginLeft="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <Button
         android:id="@+id/button1"
         style="@style/Widget.AppCompat.Button.Colored"
@@ -86,7 +100,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginLeft="10dp"
         android:backgroundTint="@color/frost"
-        android:text="Button1"
+        android:text="Say hello"
         android:fontFamily="sans-serif"/>
     <Button
         android:id="@+id/button2"
