Add complete trust store implementation to value-transfer package

--- a/valuetransfer/src/main/res/menu/wallet_overview_options.xml
+++ b/valuetransfer/src/main/res/menu/wallet_overview_options.xml
@@ -6,4 +6,9 @@
         android:icon="@drawable/ic_baseline_settings_24"
         android:title="@string/menu_wallet_overview_settings"
         app:showAsAction="always"/>
+    <item
+        android:id="@+id/actionTrust"
+        android:icon="@drawable/ic_baseline_playlist_add_check_24"
+        android:title="@string/menu_wallet_overview_trust"
+        app:showAsAction="never"/>
 </menu>
