--- a/valuetransfer/src/main/res/layout/dialog_identity_onboarding_scan_select.xml
+++ b/valuetransfer/src/main/res/layout/dialog_identity_onboarding_scan_select.xml
@@ -68,11 +68,11 @@
                     android:textColor="?attr/onWidgetColor"
                     android:textStyle="bold" />
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/passport" />
+<!--                <ImageView-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:adjustViewBounds="true"-->
+<!--                    android:src="@drawable/passport" />-->
             </LinearLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -122,11 +122,11 @@
                     android:textColor="?attr/onWidgetColor"
                     android:textStyle="bold" />
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/id_card" />
+<!--                <ImageView-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:adjustViewBounds="true"-->
+<!--                    android:src="@drawable/id_card" />-->
             </LinearLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
