--- a/valuetransfer/src/main/res/layout/dialog_exchange_transaction.xml
+++ b/valuetransfer/src/main/res/layout/dialog_exchange_transaction.xml
@@ -321,6 +321,41 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:visibility="gone"
+        android:id="@+id/clUnverifiedWarning"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="12dp"
+        android:paddingVertical="8dp"
+        android:paddingHorizontal="12dp"
+        android:orientation="vertical"
+        android:background="@drawable/square_rounded">
+
+        <TextView
+            android:id="@+id/tvUnverifiedTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:textColor="?attr/onDialogColor"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:text="@string/text_unverified_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <TextView
+            android:id="@+id/tvUnverifiedDetails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="1dp"
+            android:textSize="12sp"
+            android:text="@string/text_unverified_details"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvUnverifiedTitle"
+            android:textColor="@color/design_default_color_error"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clTransactionResendButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
