--- a/literaturedao/src/main/res/layout/fragment_library_search.xml
+++ b/literaturedao/src/main/res/layout/fragment_library_search.xml
@@ -19,7 +19,8 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="horizontal"
-            android:padding="25dp">
+            android:padding="25dp"
+            android:background="@color/design_default_color_background">
 
 <!--            <ImageView-->
 <!--                android:id="@+id/imageView2"-->
@@ -94,11 +95,12 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:fontFamily="@font/cheltenhamstd_bold"
-                    android:text="Search results"
+                    android:text="Remote Search"
                     android:textColor="#000000"
                     android:textSize="34sp" />
 
                 <SearchView
+                    android:id="@+id/remote_search_bar"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="20dp"
@@ -110,6 +112,7 @@
                 </SearchView>
 
                 <ListView
+                    android:id="@+id/remote_search_results"
                     android:layout_width="match_parent"
                     android:layout_height="353dp"
                     android:layout_marginBottom="120dp" />
