--- a/literaturedao/src/main/res/menu/literature_navigation_menu.xml
+++ b/literaturedao/src/main/res/menu/literature_navigation_menu.xml
@@ -9,5 +9,5 @@
     <item
         android:id="@+id/LibraryFragment"
         android:icon="@drawable/ic_library"
-        android:title="Library" />
+        android:title="Remote Search" />
 </menu>
